--- a/.github/workflows/nimbus-workspace.yaml
+++ b/.github/workflows/nimbus-workspace.yaml
@@ -23,9 +23,6 @@ jobs:
 
       - name: Setup terraform local repo
         run: |
-          echo "provider_installation {filesystem_mirror {path    = \"$(eval echo ~$USER)/.terraform.d/plugins\"}}" > ~/.terraformrc
-          ls -lah ~/
-          cat ~/.terraformrc
           mkdir -p ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/0.1.0
           curl https://github.com/usenimbus/terraform-provider-nimbus/releases/download/v0.1.0/terraform-provider-nimbus_v0.1.0 \
             -o ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/0.1.0/linux_amd64
@@ -43,7 +40,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request'
-        run: terraform plan -no-color -input=false
+        run: terraform plan -no-color -input=false -plugin-dir="$(eval echo ~$USER)/.terraform.d/plugins"
         continue-on-error: true
 
       # - uses: actions/github-script@v6
