--- a/.github/workflows/nimbus-workspace.yaml
+++ b/.github/workflows/nimbus-workspace.yaml
@@ -23,9 +23,9 @@ jobs:
 
       - name: Setup terraform local repo
         run: |
-          mkdir -p ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/1.0.0
+          mkdir -p ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/1.0.0/linux_amd64
           curl https://github.com/usenimbus/terraform-provider-nimbus/releases/download/v0.1.0/terraform-provider-nimbus_v0.1.0 \
-            -o ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/1.0.0/linux_amd64
+            -o ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/1.0.0/linux_amd64/terraform-provider-nimbus
 
           ls ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/1.0.0/
 
