--- a/.github/workflows/nimbus-workspace.yaml
+++ b/.github/workflows/nimbus-workspace.yaml
@@ -26,16 +26,14 @@ jobs:
           mkdir -p ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/1.0.0/linux_amd64
           curl https://github.com/usenimbus/terraform-provider-nimbus/releases/download/v0.1.0/terraform-provider-nimbus_v0.1.0 \
             -o ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/1.0.0/linux_amd64/terraform-provider-nimbus
+          
+          chmod 755 ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/1.0.0/linux_amd64/terraform-provider-nimbus
 
           ls ~/.terraform.d/plugins/registry.terraform.io/usenimbus/nimbus/1.0.0/
 
       - name: Terraform Init
         id: init
         run: terraform init
-      
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate -no-color
 
       - name: Terraform Plan
         id: plan
