--- a/.github/workflows/nimbus-workspace.yaml
+++ b/.github/workflows/nimbus-workspace.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -input=false --plugin-dir="$(eval echo ~$USER)/.terraform.d/plugins"
+        run: terraform plan -no-color -input=false
         continue-on-error: true
 
       # - uses: actions/github-script@v6
