--- a/.github/workflows/nimbus-workspace.yaml
+++ b/.github/workflows/nimbus-workspace.yaml
@@ -6,6 +6,16 @@ on:
       workspaceId:
         description: 'Id of an existing workspace instance to upsert'
         required: false
+      workspaceName:
+        description: 'Workspace Name'
+        default: 'test-workspace'
+        required: false
+      templateId:
+        description: 'Id of an existing Nimbus Template'
+        required: true
+      authToken:
+        description: 'Nimbus Auth Token'
+        required: true
 
 jobs:
   terraform:
@@ -37,7 +47,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -input=false
+        run: terraform plan -no-color -input=false -var="workspace_name=${{inputs.workspaceName}}" -var="template_id=${{inputs.authToken}}" -var="nimbus.auth_token=${{inputs.authToken}}"
         continue-on-error: true
 
       # - uses: actions/github-script@v6
