chore: add outputs

--- a/.github/workflows/nimbus-workspace.yaml
+++ b/.github/workflows/nimbus-workspace.yaml
@@ -61,9 +61,14 @@ jobs:
         id: apply
         run: terraform apply -no-color -auto-approve -input=false -var="workspace_name=${{inputs.workspaceName}}" -var="template_id=${{inputs.templateId}}" -var="nimbusAuthToken=${{inputs.authToken}}"
 
+      - name: Outputs
+        run: |
+          terraform output 
+
       - name: Update Nimbus Status
         run: |
-          echo "Update"
+          external_id="$(terraform output external_id)"
+          echo "external_id: $external_id"
 
       # - uses: actions/github-script@v6
       #   if: github.event_name == 'pull_request'
