--- a/.github/workflows/nimbus-workspace.yaml
+++ b/.github/workflows/nimbus-workspace.yaml
@@ -45,6 +45,11 @@ jobs:
         id: init
         run: terraform init
 
+      - name: Terraform Import
+        id: init
+        run: |
+          terraform import aws_security_group.www ${{inputs.workspaceName}}
+
       - name: Terraform Plan
         env:
           AWS_ACCESS_KEY_ID: '${{ secrets.AWS_ACCESS_KEY_ID }}'
